[tool.poetry]
name = "user_manager_service"
version = "0.1.0"
description = "Micro-service to handle user management"
authors = ["Austin Nieset <ajnieset@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
